Add Fantasque font and alias to nvim in .zshrc

--- a/termite/config
+++ b/termite/config
@@ -1,6 +1,6 @@
 [options]
 
-font = DejaVu Sans Mono for Powerline Book 11
+font = Fantasque Sans Mono 12
 dynamic_title = false
 mouse_autohide = true
 
